# ImGuiColorTextEdit-CMake

./: .gitignore  CMakeLists.txt  TextEditor.cpp  TextEditor.h
cmake/: fetch-abseil.cmake  fetch-imgui.cmake  fetch-re2.cmake
tests/: CMakeLists.txt  dx11.cpp
